# AI_playground

./: README.md  breast_cancer_classifier.ipynb
breast_cancer_classifier/: README.md  pyproject.toml
mammographic_mass/: mammographic_mass.ipynb
personas/coder/: CLAUDE.md
personas/expert-gardener/: garden-planner.html
personas/planner/: CLAUDE.md
personas/scientific-product-manager/: CLAUDE.md
